@@ -34,6 +34,7 @@ pyReScene
    contains new files. new in the sense of addition e.g. proof jpg
  - add a switch (like -z) for a single executable
  - add --broken-samples parameter
+ - don't make SRR files disappear when no new one can be created
     
 pyReSample
 ==========
